src/rules/snapshots/pg_migration_lint__rules__pgm101__tests__alter_column_type_timestamp_fires.snap
---
source: src/rules/pgm101.rs
expression: findings
---
- rule_id: PGM101
  severity: Minor
  message: "Column 'created_at' on 'events' uses 'timestamp without time zone'. Use 'timestamptz' (timestamp with time zone) instead to store unambiguous points in time."
  file: migrations/003.sql
  start_line: 1
  end_line: 1
